@@ -9,6 +9,7 @@
   <application android:label="@string/app_name"
                android:hasCode="true"
                android:hardwareAccelerated="true"
+               android:requestLegacyExternalStorage="true"
                android:icon="@drawable/ic_launcher">
     <!-- Our activity is based on the built-in NativeActivity framework class.
          This will take care of integrating with our NDK code. -->
