@@ -5,7 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.0.1'
+    classpath 'com.android.tools.build:gradle:4.1.0'
     classpath "com.github.ben-manes:gradle-versions-plugin:0.22.0"
   }
 }
